Fixed view shift-logs bug

--- a/src/app/pages/dashboard/widgets/case-data-widget/case-data-widget-table/case-data-widget-table.component.scss
+++ b/src/app/pages/dashboard/widgets/case-data-widget/case-data-widget-table/case-data-widget-table.component.scss
@@ -4,3 +4,7 @@
   box-shadow: none;
   border-radius: 0;
 }
+
+.shifts-btn {
+  margin-right: 10vh;
+}
